Archive2/d5/a244bbd1ed4e64/output
main.cpp:11:7: error: member 'f' found in multiple base classes of different types
    c.f(0);
      ^
main.cpp:3:17: note: member found by ambiguous name lookup
struct A { void f(int); };
                ^
main.cpp:4:17: note: member found by ambiguous name lookup
struct B { void f(std::string); };
                ^
1 error generated.
